[package]
name = "keel"
version = "0.1.0"
edition = "2021"
authors = ["Allmend Contributors"]
license = "Apache-2.0"
description = "Fast, modern, self-hosted load balancer, reverse proxy, and API gateway"

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
# Proxy framework
pingora = { version = "0.8", features = ["lb", "openssl"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"

# Async runtime (Pingora requires Tokio)
tokio = { version = "1", features = ["full"] }
bytes = "1"
arc-swap = "1"
ipnet = "2"

# Unix process management — fork, setuid, signals
nix = { version = "0.29", features = ["process", "user", "signal"] }
libc = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Metrics
prometheus = "0.13"
once_cell = "1"

# Access logging
serde_json = "1"
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cluster
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
