[package]
name = "keel-control"
version = "0.5.0"
edition = "2021"
authors = ["Allmend Contributors"]
license = "Apache-2.0"
description = "Control protocol types and client for Keel — shared by keel and keelctl"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
